--- a/src/sass/templates/_clients.sass
+++ b/src/sass/templates/_clients.sass
@@ -14,6 +14,7 @@
     margin-top: 45px
   &__card
     position: relative
+    width: 100%
     max-width: 26.857rem
     padding: 26px 21px 67px
     background-color: $light
